# tree_machine

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  LICENSE.md  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup_.py
.github/workflows/: format_lint.yml  formatting_lint.yml  publish_artifact.yml  publish_docs.yml  publish_merge.yml  test.yml
api_base/: index.html
api_classifier_cv/: index.html
api_deep_classifier/: index.html
api_deep_regression/: index.html
api_guide/: index.html
api_quantile_cv/: index.html
api_regression_cv/: index.html
base/: index.html
classification_metrics/: index.html
classifier_cv/: index.html
custom_metrics/: index.html
deep_classification_trees/: index.html
deep_regression_trees/: index.html
docs/: .buildinfo  api_base.md  api_classifier_cv.md  api_deep_classifier.md  api_deep_regression.md  api_guide.md  api_quantile_cv.md  api_regression_cv.md  base.md  classification_metrics.md  classifier_cv.md  conf.py  custom_metrics.md  deep_classification_trees.md  deep_regression_trees.md  explainer.md  genindex.html  index.html  index.md  index.rst  license.md  modules.html  objects.inv  optimizer_params.md  py-modindex.html  quantile_cv.md  regression_cv.md  regression_metrics.md  search.html  searchindex.js  treemachine.auto_trees.html  treemachine.html  types.md
docs/.doctrees/: environment.pickle  index.doctree  modules.doctree  treemachine.auto_trees.doctree  treemachine.doctree
docs/.doctrees/markdown/: base.doctree  classifier_cv.doctree  defaults.doctree  metrics.doctree  optimizer_base.doctree  regression_cv.doctree  transforms.doctree  types.doctree
docs/_modules/: index.html
docs/_modules/sklearn/utils/: _metadata_requests.html
docs/_modules/treemachine/auto_trees/: base.html  classifier_cv.html  defaults.html  optimizer_base.html  regression_cv.html  transforms.html
docs/_sources/: index.rst.txt  modules.rst.txt  treemachine.auto_trees.rst.txt  treemachine.rst.txt
docs/_sources/markdown/: base.md.txt  defaults.md.txt  optimizer_base.md.txt  transforms.md.txt  types.md.txt
docs/_static/: documentation_options.js
docs/markdown/: base.html  classifier_cv.html  defaults.html  metrics.html  optimizer_base.html  regression_cv.html  transforms.html  types.html
docs_build/: conf.py
docs_build/markdown/: classifier_cv.md  defaults.md  metrics.md  optimizer_base.md  regression_cv.md
explainer/: index.html
license/: index.html
optimizer_params/: index.html
quantile_cv/: index.html
regression_cv/: index.html
regression_metrics/: index.html
search/: search_index.json
src/bezzanlabs/base/: mock.py
src/bezzanlabs/treemachine/: __init__.py  splitter_proto.py  types.py
src/bezzanlabs/treemachine/auto_trees/: __init__.py  base.py  classifier.py  classifier_cv.py  config.py  defaults.py  metrics.py  optimizer_base.py  regression_cv.py  regressor.py  splitter_proto.py  transforms.py  types.py
src/bezzanlabs/treemachine/auto_trees/fixes/: __init__.py
src/bezzanlabs/treemachine/cv/: __init__.py  datetime.py  no_split.py
src/bezzanlabs/treemachine/deep_trees/: __init__.py  base.py  classifier.py  config.py  deep_classifier.py  deep_classifier_cv.py  deep_regressor.py  forest_layer.py  regressor.py  tree_layer.py
src/bezzanlabs/treemachine/deep_trees/layers/: __init__.py  builder.py  forest_layer.py  tree_layer.py
src/bezzanlabs/treemachine/optimize/: __init__.py  base.py
src/bezzanlabs/treemachine/trees/: __init__.py  base.py  classifier.py  config.py  regressor.py  types.py
src/bezzanlabs/treemachine/trees/fixes/: patch_skopt.py
src/tree_machine/: __init__.py  base.py  classification_metrics.py  classifier_cv.py  explainer.py  extras.py  optimizer_params.py  parameters.py  quantile_cv.py  regression_cv.py  regression_metrics.py  types.py
src/tree_machine/deep_trees/: __init__.py  base.py  classifier.py  regression.py
src/tree_machine/deep_trees/layers/: __init__.py  forest_builder.py  forest_layer.py  tree_layer.py
src/tree_machine/extras/: __init__.py
src/tree_machine/extras/fit_extender/: __init__.py  fit_extender.py  outlier_detector.py  train_data.py
tests/: __init__.py  test_classifier.py  test_deep_classifier.py  test_deep_forest_layer.py  test_deep_regressor.py  test_deep_tree_layer.py  test_df_classifier.py  test_df_regression.py  test_dummy.py  test_pickle_custom_metrics.py  test_regressor.py
types/: index.html
