[build-system]
requires = ["setuptools>=75.1.0", "wheel>=0.44.0"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "bezzanlabs.tree_machine"
authors = [
  {name="Vitor Bezzan", email="vitor@bezzan.com"},
]
description = "An AutoML package to fit tree models easily, with a xgboost backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>2, <2.2",
    "pandas~=2.2",
    "scikit-learn>1.5, <1.6",
    "xgboost~=2.1",
    "optuna~=4.1",
    "optuna-integration~=4.1",
    "pydantic~=2.10",
    "shap>=0.46; python_version < '3.13'",
]

[tool.setuptools.dynamic]
version = {attr = "tree_machine.__version__"}

[project.optional-dependencies]
dev = [
    "pre-commit~=3.5.0",
    "mypy~=1.6.0",
    "pytest==7.3.1",
    "pytest-mock==3.14.0",
    "pytest-cov==5.0.0",
    "isort==5.12.0",
    "pandas-stubs==2.1.1.230928",
    "mkdocs~=1.6.1",
    "mkdocs-material==9.5.47",
    "mkdocstrings-python==1.12.2",
    "mkdocs-exporter==6.2.0",
    "bandit==1.8.0",
    "pip_audit==2.7.3",
]

[project.urls]
"Homepage" = "https://github.com/vitorbezzan/tree_machine"
"Bug Tracker" = "https://github.com/vitorbezzan/tree_machine"

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report html --cov-report term-missing --cov-fail-under 0"
pythonpath = [
  "src"
]
