[build-system]
requires = ["setuptools>=75.1.0", "wheel>=0.44.0"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "tree_machine"
authors = [
  {name="Vitor Bezzan", email="vitor@bezzan.com"},
]
description = "An AutoML package to fit tree models easily, with XGBoost, CatBoost, and LightGBM backends"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.5.0, <1.8.0",
    "xgboost>=2.0.0",
    "catboost>=1.2.8",
    "optuna>=4.1.0",
    "optuna-integration>=4.1.0",
    "pydantic>=2.10.0",
    "shap>=0.46.0",
]

[tool.setuptools.dynamic]
version = {attr = "tree_machine.__version__"}

[project.optional-dependencies]
dev = [
    "pre-commit==4.2.0",
    "mypy==1.15.0",
    "pytest==8.3.5",
    "pytest-mock==3.14.0",
    "pytest-cov==6.1.1",
    "isort==6.0.1",
    "pandas-stubs==2.2.3.250308",
    "mkdocs==1.6.1",
    "mkdocs-material==9.6.12",
    "mkdocstrings-python==1.16.10",
    "mkdocs-exporter==6.2.0",
    "bandit==1.8.3",
    "pip_audit==2.9.0",
]

lightgbm = [
    "lightgbm>=4.6.0",
    "pre-commit==4.2.0",
    "mypy==1.15.0",
    "pytest==8.3.5",
    "pytest-mock==3.14.0",
    "pytest-cov==6.1.1",
    "isort==6.0.1",
    "pandas-stubs==2.2.3.250308",
    "mkdocs==1.6.1",
    "mkdocs-material==9.6.12",
    "mkdocstrings-python==1.16.10",
    "mkdocs-exporter==6.2.0",
    "bandit==1.8.3",
    "pip_audit==2.9.0",
]

[project.urls]
"Homepage" = "https://github.com/vitorbezzan/tree_machine"
"Bug Tracker" = "https://github.com/vitorbezzan/tree_machine"

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report html --cov-report term-missing --cov-fail-under 0"
pythonpath = [
  "src"
]
