[build-system]
requires = ["setuptools>=75.1.0", "wheel>=0.44.0"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "tree_machine"
authors = [
  {name="Vitor Bezzan", email="vitor@bezzan.com"},
]
description = "An AutoML package to fit tree models easily, with XGBoost and CatBoost backends"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.5.0, <1.8.0",
    "xgboost>=2.0.0",
    "catboost>=1.2.8",
    "optuna>=4.1.0",
    "optuna-integration>=4.1.0",
    "pydantic>=2.10.0",
    "shap>=0.50.0",
]

[tool.setuptools.dynamic]
version = {attr = "tree_machine.__version__"}

[project.optional-dependencies]
dev = [
    "pre-commit==4.5.1",
    "mypy==1.19.1",
    "pytest==9.0.2",
    "pytest-mock==3.15.1",
    "pytest-cov==7.0.0",
    "isort==7.0.0",
    "pandas-stubs==2.3.3.251219",
    "mkdocs==1.6.1",
    "mkdocs-material==9.7.1",
    "mkdocstrings-python==2.0.1",
    "mkdocs-exporter==6.2.0",
    "bandit==1.9.2",
    "pip_audit==2.10.0",
]

experimental = [
    "tensorflow>=2.20.0",
    "keras>=3.13.0",
]

[project.urls]
"Homepage" = "https://github.com/vitorbezzan/tree_machine"
"Bug Tracker" = "https://github.com/vitorbezzan/tree_machine"

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report html --cov-report term-missing --cov-fail-under 0"
pythonpath = [
  "src"
]
